# GeoIT3D_to_glTF

./: .gitignore  GeoIT3D_to_GLTF.ipynb  GeoIT3D_to_glTF_Colab.ipynb  GeoIT3D_to_glTF_Colab_clean.ipynb  HOW_IT_WORKS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: Metadata_Modelli3D_ISO.xlsx  code_mapping.csv  color_scheme.csv  model.glb
src/geoit3d_to_gltf/: convert_zip_to_glb.py  iso_sheet.py  tsurf_to_trimesh.py  validation.py
