[metadata]
name = GeoIT3D_to_glTF
version = 0.1.0
description = Conversione di modelli geologici 3D GeoIT3D (ISPRA) in glTF/GLB per visualizzatori web.
long_description = file: README.md
long_description_content_type = text/markdown
author = ISPRA - Servizio Geologico d’Italia
license = MIT
url = https://github.com/BaterHub/GeoIT3D_to_glTF

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    trimesh
    numpy
    pandas
    click
    openpyxl

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    geoit3d-to-gltf = geoit3d_to_gltf.convert_zip_to_glb:main
